Temporary implementation for optional asset files